--- a/Instagram/app/src/main/res/layout/activity_main.xml
+++ b/Instagram/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
         android:layout_marginTop="104dp"
         android:ems="10"
         android:hint="Description..."
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +55,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etDescription"
         app:rippleColor="#9C27B0" />
+
+    <Button
+        android:id="@+id/btnHome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="320dp"
+        android:text="Home"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:rippleColor="#9C27B0"
+        tools:layout_editor_absoluteY="4dp" />
 
     <ImageView
         android:id="@+id/ivPostImage"
