Bottom Navigation feature Implemented / Fragments added
Fragments added
Updated the bottom navigation

--- a/Instagram/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/Instagram/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -19,4 +19,9 @@
         android:icon="@drawable/camera_shadow_fill"
         android:title="@string/camera"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/action_btnLogout"
+        android:icon="?attr/actionModeCloseDrawable"
+        android:title="logout"
+        app:showAsAction="always" />
 </menu>
