--- a/Instagram/app/src/main/res/menu/menu_main.xml
+++ b/Instagram/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/btnLogout"
+        android:id="@+id/btnLogoutbtn"
         android:icon="?attr/actionModeCloseDrawable"
         android:title="logout"
         app:showAsAction="always" />
