--- a/Instagram/app/src/main/res/layout/activity_post_details.xml
+++ b/Instagram/app/src/main/res/layout/activity_post_details.xml
@@ -4,36 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PostDetailsActivity">
+    tools:context=".PostDetailsActivity"
+    android:fitsSystemWindows="true">
 
     <ImageView
         android:id="@+id/detailPhoto"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.253"
+        app:layout_constraintTop_toBottomOf="@+id/profileImage"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/postUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="68dp"
         android:text="Username"
-        app:layout_constraintBottom_toTopOf="@+id/detailPhoto"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/profileImage"
+        app:layout_constraintTop_toTopOf="@+id/profileImage" />
 
     <TextView
         android:id="@+id/postTimeStamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
         android:text="timeAgo"
-        app:layout_constraintBottom_toTopOf="@+id/detailPhoto"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/postUsername" />
 
     <TextView
         android:id="@+id/postDescription"
@@ -52,11 +53,9 @@
         android:id="@+id/profileImage"
         android:layout_width="24dp"
         android:layout_height="20dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="96dp"
-        app:layout_constraintBottom_toTopOf="@+id/detailPhoto"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="56dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.27"
-        tools:srcCompat="@drawable/instagram_user_filled_24" />
+        tools:srcCompat="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
