--- a/Instagram/app/src/main/res/layout/item_post.xml
+++ b/Instagram/app/src/main/res/layout/item_post.xml
@@ -67,7 +67,7 @@
         app:srcCompat="@drawable/ic_heart" />
 
     <ImageButton
-        android:id="@+id/ibReply"
+        android:id="@+id/ibComment"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginTop="8dp"
@@ -87,5 +87,16 @@
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="335dp"
         app:layout_constraintTop_toBottomOf="@+id/tvDescription"/>
+    <TextView
+        android:id="@+id/tvlikesCounter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="220dp"
+        android:text="0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.271"
+        app:layout_constraintStart_toEndOf="@+id/ibComment"
+        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
