--- a/Instagram/app/src/main/res/layout/activity_post_details.xml
+++ b/Instagram/app/src/main/res/layout/activity_post_details.xml
@@ -8,51 +8,53 @@
     tools:context=".PostDetailsActivity">
 
     <ImageView
-        android:id="@+id/detailPhoto"
+        android:id="@+id/ivImage"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/tvDescription"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/postUsername"
+        app:layout_constraintTop_toBottomOf="@+id/tvUsername"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/postUsername"
+        android:id="@+id/tvUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="16dp"
         android:text="Username"
         app:layout_constraintStart_toEndOf="@+id/profilePicture"
-        tools:layout_editor_absoluteY="75dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/postTimeStamp"
+        android:id="@+id/tvTimeStamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:text="timeAgo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/postUsername" />
+        app:layout_constraintTop_toTopOf="@+id/tvUsername" />
 
     <TextView
-        android:id="@+id/postDescription"
-        android:layout_width="fill_parent"
+        android:id="@+id/tvDescription"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="10dp"
-        android:text="Description"
+        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detailPhoto" />
+        app:layout_constraintTop_toBottomOf="@+id/ivImage"
+        tools:text="First spring in DC" />
 
     <ImageView
         android:id="@+id/profilePicture"
-        android:layout_width="24dp"
-        android:layout_height="20dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="72dp"
+        android:layout_width="34dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageButton
@@ -63,8 +65,9 @@
         android:layout_marginTop="8dp"
         android:background="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/ibReply"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/postDescription"
+        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
         app:srcCompat="@drawable/ic_heart" />
 
     <ImageButton
@@ -72,11 +75,11 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="320dp"
+        android:layout_marginEnd="312dp"
         android:background="@color/white"
         android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/postDescription"
+        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
         app:srcCompat="@drawable/comment" />
 
     <TextView
@@ -87,8 +90,8 @@
         android:layout_marginEnd="220dp"
         android:text="0"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.271"
+        app:layout_constraintHorizontal_bias="0.14"
         app:layout_constraintStart_toEndOf="@+id/ibReply"
-        app:layout_constraintTop_toBottomOf="@+id/postDescription" />
+        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
