--- a/Instagram/app/src/main/res/layout/item_post.xml
+++ b/Instagram/app/src/main/res/layout/item_post.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:background="@color/white"
@@ -11,8 +11,10 @@
 
     <TextView
         android:id="@+id/tvUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="75dp"
+        android:layout_height="34dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="16dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintStart_toEndOf="@+id/profilePicture"
@@ -23,15 +25,20 @@
         android:id="@+id/profilePicture"
         android:layout_width="37dp"
         android:layout_height="33dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="16dp"
         android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="@+id/tvUsername"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/ivImage"
         tools:layout_editor_absoluteX="0dp"
         tools:text="First spring in DC" />
@@ -40,19 +47,21 @@
         android:id="@+id/tvTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="8dp"
+        android:text="timeAgo"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="5dp"
-        tools:text="Time" />
+        app:layout_constraintTop_toTopOf="@+id/tvUsername" />
 
     <ImageView
         android:id="@+id/ivImage"
-        android:layout_width="match_parent"
-        android:layout_height="280dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="383dp"
+        android:layout_height="281dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="4dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profilePicture"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageButton
@@ -78,15 +87,6 @@
         app:layout_constraintTop_toBottomOf="@+id/tvDescription"
         app:srcCompat="@drawable/comment" />
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:outlineAmbientShadowColor="@color/black"
-        android:background="?android:attr/listDivider"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="335dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvDescription"/>
     <TextView
         android:id="@+id/tvlikesCounter"
         android:layout_width="wrap_content"
