--- a/Instagram/app/src/main/res/layout/item_post.xml
+++ b/Instagram/app/src/main/res/layout/item_post.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:background="@color/white"
@@ -13,10 +13,11 @@
         android:id="@+id/tvUsername"
         android:layout_width="75dp"
         android:layout_height="34dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="17sp"
         app:layout_constraintStart_toEndOf="@+id/profilePicture"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="barsha" />
@@ -25,8 +26,8 @@
         android:id="@+id/profilePicture"
         android:layout_width="37dp"
         android:layout_height="33dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="@+id/tvUsername"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +48,7 @@
         android:id="@+id/tvTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="timeAgo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,8 +58,8 @@
         android:id="@+id/ivImage"
         android:layout_width="383dp"
         android:layout_height="281dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="4dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profilePicture"
