--- a/Instagram/app/src/main/res/layout/activity_feed.xml
+++ b/Instagram/app/src/main/res/layout/activity_feed.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,8 +9,8 @@
         android:id="@+id/swipeContainer"
         android:layout_width="406dp"
         android:layout_height="661dp"
-        tools:layout_editor_absoluteX="5dp"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="5dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvPosts"
