--- a/Instagram/app/src/main/res/layout/fragment_posts.xml
+++ b/Instagram/app/src/main/res/layout/fragment_posts.xml
@@ -6,19 +6,19 @@
     tools:context=".fragments.PostsFragment">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-    android:id="@+id/swipeContainer"
-    android:layout_width="406dp"
-    android:layout_height="661dp"
-    tools:layout_editor_absoluteX="5dp"
-    tools:ignore="MissingConstraints">
+        android:id="@+id/swipeContainer"
+        android:layout_width="406dp"
+        android:layout_height="661dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="5dp">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvPosts"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:padding="8dp" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvPosts"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:padding="8dp" />
 
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </FrameLayout>
