--- a/Instagram/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/Instagram/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -2,25 +2,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_home"
+        android:id="@+id/actionHome"
         android:enabled="true"
         android:icon="@drawable/instagram_home_outline_24"
         android:title="@string/home"
         app:showAsAction="always" />
     <item
-        android:id="@+id/action_profile"
+        android:id="@+id/actionProfile"
         android:enabled="true"
         android:icon="@drawable/instagram_user_outline_24"
         android:title="@string/profile"
         app:showAsAction="always" />
     <item
-        android:id="@+id/action_compose"
+        android:id="@+id/actionCompose"
         android:enabled="true"
         android:icon="@drawable/camera_shadow_fill"
         android:title="@string/camera"
         app:showAsAction="always" />
     <item
-        android:id="@+id/action_btnLogout"
+        android:id="@+id/actionBtnLogout"
         android:icon="?attr/actionModeCloseDrawable"
         android:title="logout"
         app:showAsAction="always" />
